fix JwtClaims, add endpoint check user info
