# internal/types/me.go
@@ -2,9 +2,7 @@ package types
 
 import "time"
 
-// JwtClaims represents minimal set of fields extracted from JWT token
-// and propagated through Fiber context.
-type JwtClaims struct {
+type SuccessResponseMe struct {
 	UserID      string    `json:"user_id"`
 	Username    string    `json:"username"`
 	Email       string    `json:"email"`
